--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @category do |f| %>
-    <%= f.input :name%>  
+    <%= f.input :title%>  
   
     <%= f.submit 'Create Category', class: 'btn btn-primary' %>
   
