menu model init

--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,10 +1,8 @@
-<%= simple_form_for @menu do |f| %>
-    <%= f.input :title%>
+# <%= simple_form_for @menu do |f| %>
+#     <%= f.input :title%>
+#     <%= f.input :menu_date, as: :date, html5: true, label: 'Date'%>
 
-    <%= f.input :meals, collection: Meals.all, input_html: { multiple: true } %>
-    <%= f.input :price_init, label: 'Price' %>
-
-    <%= f.submit 'Create Menu', class: 'btn btn-primary' %>
+#     <%= f.submit 'Create Menu', class: 'btn btn-primary' %>
   
-  <% end %>
+#   <% end %>
 
