--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,10 @@
 
           <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-              <li><%= link_to 'New Meal', new_meal_path %></li>
-              <li><%= link_to 'New Category', new_category_path %></li>
-              <li><%= link_to 'New Menu', new_menu_path %></li>
+              <li><%= link_to ' New Meal ', new_meal_path %></li>
+              <li><%= link_to ' New Category ', new_category_path %></li>
+              <li><%= link_to ' New Menu ', new_menu_path %></li>
+              <li><%= link_to ' Fill Menu ', new_menu_path %></li>
             </ul>
           </div>
         </div>
