--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
               <li><%= link_to ' New Meal ', new_meal_path %></li>
               <li><%= link_to ' New Category ', new_category_path %></li>
               <li><%= link_to ' New Menu ', new_menu_path %></li>
-              <li><%= link_to ' Fill Menu ', new_menu_path %></li>
+              <li><%= link_to ' Fill Menu ', new_menu_meal_path %></li>
             </ul>
           </div>
         </div>
