--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.input :description %>
   <%= f.input :promo, label: 'Promo meal' %>
   <%= f.input :cover_image, as: :file %>
-  <%= f.input :category_id, collection: Category.all, label_method: :title, value_method: :id, :prompt => 'Choose an existing Item', label: 'Category' %>
+  <%= f.association :category, :prompt => 'Choose an existing Item', label: 'Category' %>
   <%= f.input :price_init, label: 'Price' %>
   
   <%= f.submit 'Create Meal', class: 'btn btn-primary' %>
