--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
               <li class="nav-item" ><%= link_to ' New Category ', new_category_path, class: "nav-link" %></li>
               <li class="nav-item" ><%= link_to ' New Menu ', new_menu_path, class: "nav-link" %></li>
               <li class="nav-item" ><%= link_to ' Fill Menu ', new_menu_meal_path, class: "nav-link" %></li>
+              <li class="nav-item" ><%= link_to ' New User ', new_user_path, class: "nav-link" %></li>
             </ul>
           </div>
         </div>
