--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,22 @@
 
           <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+
+              <li class="nav-item" ><%= link_to ' Lets eat ', root_url, class: "nav-link" %></li>
               <li class="nav-item" ><%= link_to ' New Meal ', new_meal_path, class: "nav-link" %></li>
               <li class="nav-item" ><%= link_to ' New Category ', new_category_path, class: "nav-link" %></li>
               <li class="nav-item" ><%= link_to ' New Menu ', new_menu_path, class: "nav-link" %></li>
               <li class="nav-item" ><%= link_to ' Fill Menu ', new_menu_meal_path, class: "nav-link" %></li>
-              <li class="nav-item" ><%= link_to ' New User ', new_user_path, class: "nav-link" %></li>
-              <li class="nav-item" ><%= link_to ' Login ', new_session_path, class: "nav-link" %></li>
+
+              <div>
+                <% if current_user.present? %>
+                  <%= "@#{current_user.nickname}" %>
+                  <li class="nav-item" ><%= link_to ' Logout ', root_url, class: "nav-link" %></li>
+                <% else %>
+                  <li class="nav-item" ><%= link_to ' New User ', new_user_path, class: "nav-link" %></li>
+                  <li class="nav-item" ><%= link_to ' Login ', new_session_path, class: "nav-link" %></li>
+                <% end %>
+              </div>
             </ul>
           </div>
         </div>
