--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,8 +2,7 @@
     <%= f.input :name %>
     <%= f.input :email, label: 'email' %>
     <%= f.input :nickname, label: 'nickname' %>
-    <%= f.input :password, label: 'password' %>
-    <%= f.input :password, label: 'password' %>
-      
+    <%= f.input :password, :required => true, input_html: { value: @user.password }, label: 'password' %>
+    
     <%= f.submit 'Create User', class: 'btn btn-primary' %>
   <% end %>
