--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,8 @@
               <div>
                 <% if current_user.present? %>
                   <%= "@#{current_user.nickname}" %>
-                  <li class="nav-item" ><%= link_to ' Logout ', root_url, class: "nav-link" %></li>
-                <% else %>
+                  <li class="nav-item" ><%= button_to 'Logout', session_path, method: :delete, class: "nav-link" %></li>
+                  <% else %>
                   <li class="nav-item" ><%= link_to ' New User ', new_user_path, class: "nav-link" %></li>
                   <li class="nav-item" ><%= link_to ' Login ', new_session_path, class: "nav-link" %></li>
                 <% end %>
