--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -2,12 +2,10 @@
   <%= f.error_notification %>
   <%= f.input :title%>  
 
-  <%= f.simple_fields_for :meals do |builder| %>
-    <%= render 'meal_fields', meal: @meal %>
+  <%= f.simple_fields_for :meals do |meals| %>
+    <%= render 'meal_fields',  { f: meals, category: @category }  %>
   <% end %>
 
   <%= f.submit 'Create Category', class: 'btn btn-primary' %>
 <% end %>
 
-
-<%= render 'form', meal: @meal %>
