--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,16 @@
+<% "Category" %>
 <h1><%=@category.title %> </h1>
+
+<ol>
+<% for meal in @category.meals %>
+  <li>
+    <%=h meal.title %>
+  </li>
+<% end %>
+</ol>
+
+<p>
+  <%= link_to "Edit", edit_category_path(@category) %> |
+  <%= link_to "Destroy", @category, :confirm => 'Are you sure?', :method => :delete %> |
+  <%= link_to "View All", categories_path %>
+</p>
