--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -1,2 +1,8 @@
 <h1><%=  @meal.title %> </h1>
 <div><%= @meal.description_html.html_safe %></div>
+
+<p>
+  <%= link_to "Edit", edit_meal_path(@meal) %> |
+  <%= link_to "Destroy", @meal, :confirm => 'Are you sure?', :method => :delete %> |
+  <%= link_to "View All", meals_path %>
+</p>
