--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -7,9 +7,9 @@
       <td><%=h meal.title %></td>
       <td><%= link_to "Show", meal %></td>
       <td><%= link_to "Edit", edit_meal_path(meal) %></td>
-      <td><%= link_to "Destroy", meal, :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= button_to 'Delete', meal_path(meal), 
+      method: :delete,
+      form: {data: {turbo_confirm: 'Are you sure?'}} %></td>
     </tr>
   <% end %>
 </table>
-
-<p><%= link_to "New Meal", new_meal_path %></p>
