--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,8 +1,8 @@
-<% title "Edit Category" %>
+<p> Edit Category </p>
 
 <%= render 'form', category: @category %>
 
 <p>
-  <%= link_to "Show", @category %> |
-  <%= link_to "View All", categories_path %>
+  <%= link_to "show this", @category %> |
+  <%= link_to "show all", categories_path %>
 </p>
