--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -3,6 +3,6 @@
 <%= render 'form', meal: @meal %>
 
 <p>
-  <%= link_to "Show", @meal %> |
-  <%= link_to "View All", meals_path %>
+  <%= link_to "show this", @meal %> |
+  <%= link_to "show all", meals_path %>
 </p>
