--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', meal: @meal %>
  
-<p><%= link_to "Back to List", meals_path %></p>
+<p><%= link_to "back to list", meals_path %></p>
