--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.input :title, label: 'Menu title' %>
   <%= f.input :date, as: :date, html5: true, label: 'Date'%>
   <br/>
-  <%= f.submit 'Create Menu', class: 'btn btn-primary' %>
+  <%= f.submit 'submit', class: 'btn btn-primary' %>
 
   <h3>Meal:</h3>
 
