--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for @category do |f| %>
   <%= f.error_notification %>
-  <%= f.input :title%>  
+  <%= f.input :title, label: 'Category title'%>
 
   <%= f.simple_fields_for :meals do |meals| %>
     <%= render 'meal_fields',  { f: meals, category: @category }  %>
   <% end %>
 
-  <%= f.submit 'Create Category', class: 'btn btn-primary' %>
+  <%= f.submit 'submit', class: 'btn btn-primary' %>
 <% end %>
