--- a/app/views/categories/_meal_fields.html.erb
+++ b/app/views/categories/_meal_fields.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <%= f.input :title%>
+  <%= f.input :title, label: 'Meal title'%>
   <%= f.input :price_type, collection: Meal.price_types.map { |k,v| [ k.split('_').join(' '), k ]} %>
   <%= f.input :description %>
   <%= f.input :promo, label: 'Promo meal' %>
