--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', category: @category %>
 
-<p><%= link_to "Back to List", categories_path %></p>
+<p><%= link_to "back to list", categories_path %></p>
