--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,9 +10,9 @@
 </ol>
 
 <p>
-  <%= link_to "Edit", edit_category_path(@category) %> |
-  <%= button_to 'Delete', category_path(@category), 
+  <%= link_to "edit", edit_category_path(@category) %> |
+  <%= link_to "view all", categories_path %> |
+  <%= button_to 'delete', category_path(@category), 
     method: :delete,
-    form: {data: {turbo_confirm: 'Are you sure?'}} %> |
-  <%= link_to "View All", categories_path %>
+    form: {data: {turbo_confirm: 'Are you sure?'}} %> 
 </p>
