--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for meal do |f| %>
-  <%= f.input :title%>
+  <%= f.input :title, label: 'Meal title'%>
   <%= f.input :price_type, collection: Meal.price_types.map { |k,v| [ k.split('_').join(' '), k ]} %>
   <%= f.input :description %>
   <%= f.input :promo, label: 'Promo meal' %>
@@ -7,6 +7,6 @@
   <%= f.association :category, :prompt => 'Choose an existing Item', label: 'Category' %>
   <%= f.input :price_init, label: 'Price' %>
     
-  <%= f.submit 'Create Meal', class: 'btn btn-primary' %>
+  <%= f.submit 'submit', class: 'btn btn-primary' %>
 
 <% end %>
