--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,15 +1,17 @@
 <table>
   <tr>
-    <th>Meals title</th>
+    <th>meals</th>
   </tr>
   <% for meal in @meals %>
     <tr>
       <td><%=h meal.title %></td>
-      <td><%= link_to "Show", meal %></td>
-      <td><%= link_to "Edit", edit_meal_path(meal) %></td>
-      <td><%= button_to 'Delete', meal_path(meal), 
+      <td><%= link_to "show", meal %></td>
+      <td><%= link_to "edit", edit_meal_path(meal) %></td>
+      <td><%= button_to 'delete', meal_path(meal), 
       method: :delete,
-      form: {data: {turbo_confirm: 'Are you sure?'}} %></td>
+      form: {data: {turbo_confirm: 'are you sure?'}} %></td>
     </tr>
   <% end %>
 </table>
+
+<p><%= link_to "create new", new_meal_path %></p>
