--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -2,9 +2,9 @@
 <div><%= @meal.description_html.html_safe %></div>
 
 <p>
-  <%= link_to "Edit", edit_meal_path(@meal) %> |
-  <%= button_to 'Delete', meal_path(@meal), 
+  <%= link_to "edit", edit_meal_path(@meal) %> |
+  <%= link_to "view All", meals_path %> |
+  <%= button_to 'delete', meal_path(@meal), 
     method: :delete,
     form: {data: {turbo_confirm: 'Are you sure?'}} %>
-  <%= link_to "View All", meals_path %>
 </p>
