--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,12 +2,14 @@
 <h1><%=@category.title %> </h1>
 
 <ol>
-<% for meal in @category.meals %>
+<% @category.meals.each do |meal| %>
   <li>
     <%=h meal.title %>
   </li>
 <% end %>
 </ol>
+
+<p><%= link_to "add meal", new_meal_path %></p>
 
 <p>
   <%= link_to "edit", edit_category_path(@category) %> |
