--- a/app/views/menu_meals/new.html.erb
+++ b/app/views/menu_meals/new.html.erb
@@ -1,6 +1,5 @@
-<%= simple_form_for @menu_meal do |f| %>
-    <%= f.association :menu, label: 'Menus' %>
-    <%= f.association :meal, label: 'Meals' %>
-    <%= f.input :price, label: 'Price' %>
-    <%= f.submit 'Add meal', class: 'btn btn-primary' %>
-<% end %>
+<h2>New menu item</h2>
+
+<%= render 'form', menu_meal: @menu_meal %>
+ 
+<p><%= link_to "back to list", menu_meals_path %></p>
