--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,13 +1,18 @@
-<% "Menu" %>
-<h1><%=@menu.title %> </h1>
+<table>
+  <tr>
+    <th><%=@menu.title %></th>
+  </tr>
+  <% @menu.menu_meals.each do |menu_meal| %>
+    <tr>
+      <td><%= link_to menu_meal.meal.title %></td>
+      <td><%= link_to "edit", edit_menu_meal_path(menu_meal) %></td>
+      <td><%= button_to 'delete', menu_meal_path(menu_meal), 
+        method: :delete,
+        form: {data: {turbo_confirm: 'are you sure?'}} %></td>
+    </tr>
+  <% end %>
+</table>
 
-<ol>
-<% for menu_meal in @menu.menu_meals %>
-  <li>
-    <%=h menu_meal.meal.title %>
-  </li>
-<% end %>
-</ol>
 
 <p><%= link_to "add new meal", new_menu_meal_path %></p>
 
