--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -5,6 +5,7 @@
   <% @menus.each do |menu| %>
     <tr>
       <td><%= link_to menu.title, menu %></td>
+      <td><%= link_to menu.date, menu %></td>
       <td><%= link_to "edit", edit_menu_path(menu) %></td>
       <td><%= button_to 'delete', menu_path(menu), 
         method: :delete,
