--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -2,6 +2,8 @@
   <tr>
     <th>menus</th>
   </tr>
+
+  <div id="menus" data-menus="<%= json_for @menus %>">
   <% @menus.each do |menu| %>
     <tr>
       <td><%= link_to menu.title, menu %></td>
@@ -12,6 +14,7 @@
         form: {data: {turbo_confirm: 'are you sure?'}} %></td>
     </tr>
   <% end %>
+  </div>
 </table>
 
 <p><%= link_to "create new menu", new_menu_path %></p>
