--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%=  @meal.title %> </h1>
-<h1><%=  @meal.price_init.class %> </h1>
+<h1><%=  @meal.price_init %> </h1>
 <div><%= @meal.description_html.html_safe %></div>
 
 <p>
