--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -19,6 +19,5 @@
   <%= link_to "edit", edit_menu_path(@menu) %> |
   <%= link_to "view all", menus_path %> |
   <%= button_to 'delete', menu_path(@menu), 
-    method: :delete,
-    form: {data: {turbo_confirm: 'Are you sure?'}} %> 
+    method: :delete, data: {confirm: "Are you sure?"} %> 
 </p>
