--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -9,6 +9,8 @@
            method: :delete,                               |
            form: {data: {turbo_confirm: 'are you sure?'}} |
 %p= link_to "add meal", new_meal_path
-%p= link_to "edit", edit_category_path(@category) |
+%p
+  = link_to "edit", edit_category_path(@category) 
+  |
   \#{link_to "view all", categories_path} |
   \#{button_to 'delete', category_path(@category),  method: :delete, form: {data: {turbo_confirm: 'Are you sure?'}}}
