--- a/app/views/meals/show.html.haml
+++ b/app/views/meals/show.html.haml
@@ -3,6 +3,8 @@
 %h1
   = @meal.price_init
 %div= @meal.description_html.html_safe
+%div= image_tag @meal.cover_image_url.to_s
+
 %p
   = link_to "edit", edit_meal_path(@meal)
   |
